# comp150-robotics

./: .gitignore  Input_Talker.cpp  LICENSE  README.md  add_two_ints_client.cpp  talker.cpp
catkin_ws/src/pathify/: CMakeLists.txt  package.xml
catkin_ws/src/pathify/PathifyMap1/: model.config  model.sdf
catkin_ws/src/pathify/launch/: .pathify_turtlebot_gazebo.launch.swp  pathify.launch  pathify_inputTalker.launch  pathify_nav.launch  pathify_turtlebot_gazebo.launch  pathify_turtlebot_gazebo_world1.launch  pathify_turtlebot_gazebo_world2.launch  pathify_turtlebot_gazebo_world3.launch
catkin_ws/src/pathify/launch/includes/: kobuki.launch.xml
catkin_ws/src/pathify/param/: costmap.yaml  navigator.yaml  operator.yaml  pathify.rviz  ros.yaml
catkin_ws/src/pathify/pathifyMaps/: map1.world
catkin_ws/src/pathify/scripts/: follower.py
catkin_ws/src/pathify/src/: ImageDetector.cpp  Input_Talker.cpp  README.md  Robot_ROM.txt  listener.cpp  talker
catkin_ws/src/pathify/src/catkin_ws/src/pathify/launch/: pathify_turtlebot_gazebo_world2.launch
catkin_ws/src/pathify/src/catkin_ws/src/pathify/src/: Input_Talker.cpp  add_two_ints_server.cpp
catkin_ws/src/pathify/src/catkin_ws/src/pathify/world/world2/: model.sdf
catkin_ws/src/pathify/src/documents/: Proposal outline.docx
catkin_ws/src/pathify/srv/: ReturnCoordinate.srv
catkin_ws/src/pathify/world/world1/: map1.world  model.sdf
catkin_ws/src/pathify/world/world2/: map2.world  model.sdf
catkin_ws/src/pathify/world/world3/: map3.world  model.config  model.sdf
documents/: Project Proposal.docx  ros-packages.txt  (+1 more)
(+81 files in other folders)
