<?xml version="1.0"?>
<package format="2">
  <name>pathify</name>
  <version>0.0.0</version>
  <description>The pathify package</description>

  <!-- Jong's email is used. Any email can do -->
 <maintainer email="jyoon10@tufts.edu">Jong Seo Yoon</maintainer>

  <license>BSD</license>
  <!-- tools and packages needed for this project -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


<export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
